index.html added a musical to list

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li>Heathers</li>
         <li>Tina Tuner</li>
         <li>Frozen</li>
+        <li>Lion King</li>
     </ul>
 </body>
 </html>
