added another item to index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li>Tina Tuner</li>
         <li>Frozen</li>
         <li>Lion King</li>
+        <li>Bob</li>
     </ul>
 </body>
 </html>
