--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <li>Tina Tuner</li>
         <li>Frozen</li>
         <li>Lion King</li>
-        <li>Bob</li>
+        <li>Mean Girls</li>
+        <li>Hi</li>
     </ul>
 </body>
 </html>
