--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <li>Tina Tuner</li>
         <li>Frozen</li>
         <li>Lion King</li>
-        <li>Mean Girls</li>
-        <li>Hi</li>
+        <li>Mean Girls</li>>
     </ul>
 </body>
 </html>
