index.html added in an additional favourite musical of mine

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li>Tina Tuner</li>
         <li>Frozen</li>
         <li>Lion King</li>
+        <li>High School Musicals</li>
     </ul>
 </body>
 </html>
